# uzaylidan-kacis-oyunu

./: .gitignore  README.md  Uzaylıdan Kaçış Oyunu.rar  pyproject.toml
src/uzaylidan_kacis_oyunu/: __init__.py  game_logic.py  gui.py  main.py  resources.py  scoreboard.py  sound.py
src/uzaylidan_kacis_oyunu/assets/: cumleler.txt
tests/: test_game_logic.py  test_scoreboard.py
